fix phone number text-decoration on iphone

--- a/styles.scss
+++ b/styles.scss
@@ -56,7 +56,7 @@ header {
   }
   }
 }
-small[x-apple-data-detectors].digits {
+a[x-apple-data-detectors].digits {
   color: lightgrey!important;
   text-decoration: none !important;
 }
